fix z-index

--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -30,7 +30,7 @@
         right: 0;
         top: 0;
         height: 100vh;
-        z-index: 9999;
+        z-index: 999;
         padding: 3rem 20px 2rem 20px;
         width: 300px;
     }
